persistent-data code drop

--- a/drivers/md/Kconfig
+++ b/drivers/md/Kconfig
@@ -208,6 +208,8 @@ config DM_DEBUG
 
 	  If unsure, say N.
 
+source "drivers/md/persistent-data/Kconfig"
+
 config DM_CRYPT
 	tristate "Crypt target support"
 	depends on BLK_DEV_DM
