--- a/drivers/md/Kconfig
+++ b/drivers/md/Kconfig
@@ -235,6 +235,18 @@ config DM_SNAPSHOT
        ---help---
          Allow volume managers to take writable snapshots of a device.
 
+config DM_THINP
+       tristate "Thin provisioning target (EXPERIMENTAL)"
+       depends on BLK_DEV_DM && EXPERIMENTAL
+       ---help---
+         Thin provisioning target for volume managers.
+
+config DM_THINP_METADATA_TEST
+       tristate "thinp metadata tests"
+       depends on DM_THINP
+       ---help---
+         Thinp-metadata unit tests
+
 config DM_MIRROR
        tristate "Mirror target"
        depends on BLK_DEV_DM
