--- a/drivers/md/Kconfig
+++ b/drivers/md/Kconfig
@@ -240,9 +240,18 @@ config DM_BUFIO
 	 as a cache, holding recently-read blocks in memory and performing
 	 delayed writes.
 
+config DM_DEBUG_BLOCK_LOCKING
+       bool "Block manager locking"
+       depends on DM_BUFIO
+       select STACKTRACE
+       ---help---
+	 Block locking can catch various metadata corruption issues.
+
+	 If unsure, say N.
+
 config DM_DEBUG_BLOCK_STACK_TRACING
        bool "Keep stack trace of persistent data block lock holders"
-       depends on STACKTRACE_SUPPORT && DM_BUFIO
+       depends on STACKTRACE_SUPPORT && DM_BUFIO && DM_DEBUG_BLOCK_LOCKING
        select STACKTRACE
        ---help---
 	 Enable this for messages that may help debug problems with the
